--- a/caseStudyWP/04-chap4.Rmd
+++ b/caseStudyWP/04-chap4.Rmd
@@ -14,10 +14,10 @@ output:
 
 <!-- LW comment: there are 8 labeled inlets in Fig 22, but Esparanza and Nootka are grouped together in Table 6 and the text refers to 7 inlets. Why are Nootka and Esperanza grouped? -->
 
-The West Coast of Vancouver Island (WCVI) Chinook SMU is comprised of 3 CUs [@holtbyConservationUnitsPacific2007; @pacificsalmoncommissionPacificSalmonCommission2018; @dfoReviewUpdateSouthern2013], 7 large inlets (or sounds), and 20 indicators populations which have relatively complete time-series and consistent observation methodology [Figure \@ref(fig:chinook-map), Table \@ref(tab:chinook-Overview); @riddellReview2001Chinook2002]. Hatcheries produce a relatively large component of the total production for many of these populations, where they help achieve harvest, conservation and assessment objectives. However, hatcheries are also considered a risk factor for the long-term sustainability of CUs because they can reduce wild genetic diversity and fitness [@withlerGeneticallyBasedTargets2018]. As described in Holt et al. (in review), only escapement indicator populations without significant enhancement (i.e., populations with Proportionate Natural Influence, PNI, values $\geqslant$ 0.5) were included in this analysis. Although most fish in these populations are of natural origin (i.e., they spawned in the wild), 'wild' fish, defined in the WSP as second generation natural-origin fish, may be in the minority [@withlerGeneticallyBasedTargets2018]. <!--CH: Chuck asked for pHOScensus values which would include out-of-basin strays. I don't have those data, but we could ask SEP/Area staff if necessary-->
+The West Coast of Vancouver Island (WCVI) Chinook SMU is comprised of 3 CUs [@holtbyConservationUnitsPacific2007; @pacificsalmoncommissionPacificSalmonCommission2018; @dfoReviewUpdateSouthern2013], 7 large inlets (or sounds), and 20 indicators populations which have relatively complete time-series and consistent observation methodology (Figure \@ref(fig:chinook-map), Table \@ref(tab:chinook-Overview)) [@riddellReview2001Chinook2002]. Hatcheries produce a relatively large component of the total production for many of these populations, where they help achieve harvest, conservation and assessment objectives. However, hatcheries are also considered a risk factor for the long-term sustainability of CUs because they can reduce wild genetic diversity and fitness [@withlerGeneticallyBasedTargets2018]. As described in Holt et al. (in review), only escapement indicator populations without significant enhancement (i.e., populations with Proportionate Natural Influence, PNI, values $\geqslant$ 0.5) were included in this analysis. Although most fish in these populations are of natural origin (i.e., they spawned in the wild), 'wild' fish, defined in the WSP as second generation natural-origin fish, may be in the minority [@withlerGeneticallyBasedTargets2018]. <!--CH: Chuck asked for pHOScensus values which would include out-of-basin strays. I don't have those data, but we could ask SEP/Area staff if necessary-->
 
 
-```{r chinook-map, fig.cap="Map of the WCVI Chinook SMU, component CUs (coloured red, blue, and yellow), and inlets (labelled in black). Not, Designatable Units (DUs) defined by COSEWIC are aligned CUs in this SMU.", warning=FALSE, echo=FALSE, fig.align="center"}
+```{r chinook-map, fig.cap="Map of the WCVI Chinook SMU, component CUs (coloured red, blue, and yellow), and inlets (labelled in black). Note, Designatable Units (DUs) defined by COSEWIC are aligned with CUs in this SMU.", warning=FALSE, echo=FALSE, fig.align="center"}
 knitr::include_graphics("figure/chinook-map.png")
 ```
 
@@ -68,9 +68,9 @@ Table: (\#tab:chinook-Overview) Overview of WCVI Chinook Stock Management Unit. 
  -->
 
 \newline
-This SMU was included as a case study to demonstrate the development of LRPs under data limitations when recruitment data are not available for deriving stock-recruitment based benchmarks, but habitat-based benchmarks exist, as is the case for Chinook Salmon in BC. WCVI Chinook is also included in the proposed first batch of major stocks for regulation under the Fish Stocks provisions, necessitating the development of LRPs for this SMU. WCVI Chinook is also highly enhanced yet does not have complete data on the proportion of hatchery-origin spawners contributing to total production, similar to many other Chinook Salmon SMUs. Furthermore, this SMU was unique among the case studies in the consideration of inlets within CUs as the level of assessment, demonstrating various spatial scales that can be integrated into SMU-level assessments. This scale is assessment is similar to the subpopulation scale used in sensitivity analyses for Interior Fraser River Coho case study.
+This SMU was included as a case study, in part, to demonstrate the development of LRPs under data limitations when recruitment data are not available for deriving stock-recruitment based benchmarks, but habitat-based benchmarks exist, as is often the case for Chinook Salmon in BC. WCVI Chinook is also included in the proposed first batch of major stocks for regulation under the Fish Stocks provisions, necessitating the development of LRPs for this SMU. WCVI Chinook is also highly enhanced yet does not have complete data on the proportion of hatchery-origin spawners contributing to total production, similar to many other Chinook Salmon SMUs. Furthermore, this SMU was unique among the case studies in the consideration of inlets within CUs as the level of assessment, demonstrating various spatial scales that can be integrated into SMU-level assessments. This scale is similar to the sub-population scale used in sensitivity analyses for the Interior Fraser River Coho case study.
 
-Virtually all Chinook in this SMU are 'ocean type', entering the ocean 1-3 months after emergence from spawning gravel [@dfoAssessmentWestCoast2012a]. 'Stream type' Chinook, those that stay in the river for one year after emergence, are rare in this SMU. After entering the ocean, WCVI Chinook generally migrate into northern BC and southeast Alaskan waters to rear for 2 to 6 years, returning to spawn predominantly at ages 3, 4 and 5 [@dfoAssessmentWestCoast2012a].
+Virtually all Chinook in this SMU are 'ocean type', entering the ocean 1 to 3 months after emergence from spawning gravel [@dfoAssessmentWestCoast2012a]. 'Stream type' Chinook, those that stay in the river for one year after emergence, are rare in this SMU. After entering the ocean, WCVI Chinook generally migrate into northern BC and southeast Alaskan waters to rear for 2 to 6 years, returning to spawn predominantly at ages 3, 4 and 5 [@dfoAssessmentWestCoast2012a].
 
 <!--CH, removed description of criteria required to infer status, as we don't do any sensitivity analysis for removing CUs:
 We considered the 4 criteria identified in Holt et al. (in review) to evaluate if status of any one CU within this SMU could be inferred from the remaining CUs. Several dominant threats are similar across the 3 WCVI CUs. Large-scale hatcheries operating within all three CUs have resulted in genetic risks from introgression [@cosewicCOSEWICAssessmentStatus2020]. Also, straying from hatchery-influenced populations may compromises the genetic composition of spawners across WCVI.  Landslides and sedimentation from forestry impact spawning habitat quality and quantity across WCVI. However, unique to one of the CUs, West Vancouver Island-South is the relatively large number of aquaculture facilities for Atlantic salmon in nearshore habitat used by Chinook Salmon, which poses a specific threat to this CU [@cosewicCOSEWICAssessmentStatus2020]. Also unique to West Vancouver Island-Nootka and Kyuquot CU are threats from recreational fisheries (in the form of approximately 100 lodges located in important areas of Chinook Salmon rearing) and industrial effluents from pulp mills [@cosewicCOSEWICAssessmentStatus2020].
@@ -87,12 +87,14 @@ Based on differences in threats and the coastal marine environment, we suggest t
 
 ### Previous assessments
 
-Two of the three CUs in this SMU, West Vancouver Island-South and West Vancouver Island-Nootka & Kyuquot, were assessed as 'Red' status in an integrated Wild Salmon Policy assessment [@dfoIntegratedBiologicalStatus2016]. For these CUs, assessments were based on component populations without hatchery enhancement within the most recent 12 years, omitting populations with enhancement during that period. For West Vancouver Island-South, Red status was based primarily on threats of genetic introgression from strays from nearby large-scale hatcheries. For West Vancouver Island-Nootka & Kyuquot, Red status was based on a very low index of abundance for non-enhanced populations and threats of genetic introgression from strays from large-scale hatcheries. The third CU, West Vancouver Island-North, was not assessed by DFO in 2016 because the indicator site for this CU was enhanced over the most recent 12 years (other metrics of hatchery enhancement, e.g., Proportionate Natural Influence or PNI were not considered). A list of indicator and non-indicator populations within each CU is available in @brown2020SummaryAbundance2020. 
+Two of the three CUs in this SMU, West Vancouver Island-South and West Vancouver Island-Nootka & Kyuquot, were assessed as Red status in an integrated Wild Salmon Policy assessment [@dfoIntegratedBiologicalStatus2016]. For these CUs, assessments were based on component populations without hatchery enhancement within the most recent 12 years, omitting populations with enhancement during that period. For West Vancouver Island-South, Red status was based primarily on threats of genetic introgression from strays from nearby large-scale hatcheries. For West Vancouver Island-Nootka & Kyuquot, Red status was based on a very low index of abundance for non-enhanced populations and threats of genetic introgression from strays from large-scale hatcheries. The third CU, West Vancouver Island-North, was not assessed because the indicator site for this CU was enhanced over the most recent 12 years (other metrics of hatchery enhancement, e.g., Proportionate Natural Influence or PNI were not considered). A list of indicator and non-indicator populations within each CU is available in @brown2020SummaryAbundance2020. 
 
 
 WCVI Chinook was identified as a stock of concern in the 2021 Integrated Fisheries Management Plan, IFMP, for South Coast Salmon, and a rebuilding plan is under development [@dfoIntegratedFisheriesManagement2021]. Poor smolt-age 2 survival rates for WCVI Chinook and low spawner levels over the past two decades are reasons for conservation concern in the IFMP [@dfoIntegratedFisheriesManagement2021, p. 129]. Since the mid 1990s, a variety of management measures have been implemented to restrict harvest on WCVI Chinook and address these concerns, described in the IFMP [@dfoIntegratedFisheriesManagement2021].
 
 
+
+<!--CH fix this next pargarapph to simplify the frst sentence-->
 Previous assessments of Chinook Salmon stocks, including WCVI, have used 'habitat-based' biological benchmarks using an empirical relationship between watershed area and common stock-recruitment biological benchmarks, spawner abundances at replacement, S~REP~, and S~MSY~, from a meta-analysis of 25 Chinook stocks across North America <!-- LW comment: suggest replacing with: ... and two stock-recruitment benchmarks: S~REP~ (spawner abundance at replacement) and S~MSY~, based on...-->  [@parkenHabitatbasedMethodsEstimate2006; @liermannUsingAccessibleWatershed2010]. Lack of rigorous spawner and recruitment data for WCVI Chinook stocks has precluded the use of stock-recruitment based benchmarks. 
 
 In November 2020, @cosewicCOSEWICAssessmentStatus2020 designated the West Vancouver Island-South and West Vancouver Island-Nootka & Kyuquot DUs as Threatened, and West Vancouver Island-North as data deficient. Threatened statuses were determined primarily from genetic risks of hatcheries enhancement and habitat threats from forestry. The West Vancouver Island-North DU was designated data deficient because it contains only one indicator population.
