--- a/caseStudyWP/03-chap3.Rmd
+++ b/caseStudyWP/03-chap3.Rmd
@@ -13,7 +13,7 @@ The Interior Fraser Coho SMU is well-suited for looking at the application of ag
 
 The SMU includes Coho Salmon that spawn in the Fraser River and tributaries upstream of Hells Gate in the Fraser Canyon. Like most Coho Salmon, Interior Fraser Coho spend at least one full year in freshwater as fry before migrating to the ocean as smolts [@arbeiderInteriorFraserCoho2020]. Most (88%) Interior Fraser Coho have a 3-year life history, in which they leave freshwater in their second year and spend 18 months at sea prior to returning to their natal system to spawn. The remaining 12% have a 4-year life history in which they spend an additional year in freshwater before migrating as smolts in their third year. Both the 3-year and 4-year life histories spend 18 months at sea. Less than 1% of Interior Fraser Coho are believed to return as jacks (precocious mature males that spend only 6 months as sea) or at ages older than 4 years [@arbeiderInteriorFraserCoho2020].
 
-Five WSP CUs have been identified for Interior Fraser Coho based on genetics and geographic separation: Middle Fraser, Fraser Canyon, Lower Thompson, North Thompson, and South Thompson [@dfoWildSalmonPolicy2015; Figure \@ref(fig:coho-map)]. Previous work by the Interior Fraser Coho Recovery Team (IFCRT) identified 11 subpopulations nested within the five CUs, and developed recovery objectives based on maintaining abundance above a 1000-spawner threshold in each of these smaller subpopulation units [@ifcrtConservationStrategyCoho2006, Table \@ref(tab:cohoCU2SP)]. The delineation of subpopulations was based on several factors, including the presence of natural barriers, the influence of large lakes on downstream discharge and thermal regimes, observations of spawner aggregations under differing discharge conditions, and genetic differentiation. The 11 subpopulations are described in detail by the @ifcrtConservationStrategyCoho2006.  
+Five WSP CUs have been identified for Interior Fraser Coho based on genetics and geographic separation: Middle Fraser, Fraser Canyon, Lower Thompson, North Thompson, and South Thompson [@dfoWildSalmonPolicy2015; Figure \@ref(fig:coho-map)]. Previous work by the Interior Fraser Coho Recovery Team (IFCRT) identified 11 sub-populations nested within the five CUs, and developed recovery objectives based on maintaining abundance above a 1000-spawner threshold in each of these smaller sub-population units [@ifcrtConservationStrategyCoho2006, Table \@ref(tab:cohoCU2SP)]. The delineation of sub-populations was based on several factors, including the presence of natural barriers, the influence of large lakes on downstream discharge and thermal regimes, observations of spawner aggregations under differing discharge conditions, and genetic differentiation. The 11 sub-populations are described in detail by the @ifcrtConservationStrategyCoho2006.  
 
 Only the upper portion of the Fraser Canyon CU (upstream of Hells Gate on the Fraser River) is included in our delineation of Interior Fraser Coho. This delineation is consistent with previous analyses for this SMU. As a result, Nahatlatch is the only sub-population included in our description of the Fraser Canyon CU. Kawakawa Creek has been excluded.
 
@@ -88,7 +88,7 @@ The first approach, which uses the Salmon Scanner tool developed by the State of
 
 The second approach is based on comparing the current abundance of each CU to its CU-specific estimate of S~gen~, where CU status is considered poor when abundance drops below S~gen~. The value of S~gen~ represents the number of spawners required to recover to S~MSY~ (spawners at maximum sustainable yield) within one generation, under equilibrium conditions in the absence of fishing [@holtIndicatorsStatusBenchmarks2009]. S~gen~ is one of several benchmarks available for assigning multidimensional CU status in WSP Integrated Status Assessments; it represents a lower benchmark between Red and Amber status zones and was used as part of the 2014 Integrated Status Assessment for Interior Fraser Coho [@dfoWildSalmonPolicy2015]. While estimates of CU status relative to S~gen~ is a readily available output from the Salmon Scanner tool, we calculated this metric external to the tool for our case study. 
 
-The third approach is based on the distribution of spawning escapement among subpopulations nested within CUs (Table \@ref(tab:cohoCU2SP)). We apply this approach for Interior Fraser Coho to maintain consistency with previous recovery planning processes for this SMU [@ifcrtConservationStrategyCoho2006; @arbeiderInteriorFraserCoho2020]. Since the distributional target we use was initially developed by the Interior Fraser Coho Recovery Team in 2006, we refer to it as "IFCRT distributional". Specifically, we use the IFCRT's short-term recovery objective that the 3-year geometric average escapement in at least half of the sub-populations within each of the five CUs is to exceed 1,000 wild-origin spawning Coho salmon, excluding hatchery fish spawning in the wild. We selected the short-term recovery target to represent poor CU status in our case study (e.g., below a lower benchmark) because, as noted by @arbeiderInteriorFraserCoho2020, the short-term target was designed as an immediate target when the population was endangered. As such, it was interpreted as a level expected to prevent extinction or loss of genetic diversity. We have included this third approach to defining CU status to demonstrate the range of approaches and metrics that can be used, and to demonstrate sensitivity of the LRP to choice of metrics for assigning CU-status.  Future iterations of the Pacific Salmon Status Scanner approach could include distributional metrics such as those used in the IFCRT approach.  
+The third approach is based on the distribution of spawning escapement among sub-populations nested within CUs (Table \@ref(tab:cohoCU2SP)). We apply this approach for Interior Fraser Coho to maintain consistency with previous recovery planning processes for this SMU [@ifcrtConservationStrategyCoho2006; @arbeiderInteriorFraserCoho2020]. Since the distributional target we use was initially developed by the Interior Fraser Coho Recovery Team in 2006, we refer to it as "IFCRT distributional". Specifically, we use the IFCRT's short-term recovery objective that the 3-year geometric average escapement in at least half of the sub-populations within each of the five CUs is to exceed 1,000 wild-origin spawning Coho salmon, excluding hatchery fish spawning in the wild. We selected the short-term recovery target to represent poor CU status in our case study (e.g., below a lower benchmark) because, as noted by @arbeiderInteriorFraserCoho2020, the short-term target was designed as an immediate target when the population was endangered. As such, it was interpreted as a level expected to prevent extinction or loss of genetic diversity. We have included this third approach to defining CU status to demonstrate the range of approaches and metrics that can be used, and to demonstrate sensitivity of the LRP to choice of metrics for assigning CU-status.  Future iterations of the Pacific Salmon Status Scanner approach could include distributional metrics such as those used in the IFCRT approach.  
 
 
 ### Estimation of Sgen{#cohoSgen}
@@ -230,10 +230,10 @@ knitr::include_graphics("figure/coho-CU-EscpSeries-wMultiStatus_Ricker_priorCap.
 
 \linebreak
 
-The frequency of years in which the IFCRT distributional target failed to be met for one or more CUs was similar to that seen when S~gen~ based on the Ricker_priorCap was used, with distributional targets not met in 4 of the 21 years between 2000 and 2020 (breached in 2006, 2015-2017). Eight of the 11 sub-populations had generational average escapement drop below the 1000 spawner threshold in one or more years (Figure \@ref(fig:coho-Subpop-timeseries)). Sub-populations tended to differ in which years they dropped below the 1000 spawner threshold, which meant that the distributional target of at least half of the subpopulations within each CU with greater than 1000 fish was more often met than not. All 11 subpopulations had generational average spawning abundances above 1000 spawners in 2020, indicating that the stock would be well above a proportional LRP based on the IFCRT-distributional target (Figure \@ref(fig:coho-Subpop-timeseries)).
+The frequency of years in which the IFCRT distributional target failed to be met for one or more CUs was similar to that seen when S~gen~ based on the Ricker_priorCap was used, with distributional targets not met in 4 of the 21 years between 2000 and 2020 (breached in 2006, 2015-2017). Eight of the 11 sub-populations had generational average escapement drop below the 1000 spawner threshold in one or more years (Figure \@ref(fig:coho-Subpop-timeseries)). Sub-populations tended to differ in which years they dropped below the 1000 spawner threshold, which meant that the distributional target of at least half of the sub-populations within each CU with greater than 1000 fish was more often met than not. All 11 sub-populations had generational average spawning abundances above 1000 spawners in 2020, indicating that the stock would be well above a proportional LRP based on the IFCRT-distributional target (Figure \@ref(fig:coho-Subpop-timeseries)).
 
 
-```{r coho-Subpop-timeseries, fig.cap="Escapement time series for 11 subpopulations of Interior Fraser Coho shown as annual escapements (lines) and 3-year geometric mean escapements (dots). First geometric mean includes years 1998-2000. Grey dots shows years in which the 3-year geometric mean escapement was above the 1000 fish threshold used to assess distributional status, while red dots show years in which the 1000 fish threshold was not met. CUs are represented by columns with labels long the y axis.", warning=FALSE, echo=FALSE, fig.align="center"}
+```{r coho-Subpop-timeseries, fig.cap="Escapement time series for 11 sub-populations of Interior Fraser Coho shown as annual escapements (lines) and 3-year geometric mean escapements (dots). First geometric mean includes years 1998-2000. Grey dots shows years in which the 3-year geometric mean escapement was above the 1000 fish threshold used to assess distributional status, while red dots show years in which the 1000 fish threshold was not met. CUs are represented by columns with labels long the y axis.", warning=FALSE, echo=FALSE, fig.align="center"}
 knitr::include_graphics("figure/coho-Subpop-EscpSeries-wStatus.png")
 ```
 
