revised WCVI CK ch

--- a/caseStudyWP/bib/refs.bib
+++ b/caseStudyWP/bib/refs.bib
@@ -774,12 +774,12 @@
   howpublished = {https://salmonexplorer.ca/\#!/vancouver-island-mainland-inlets/chum}
 }
 
-@techreport{parkenHabitatbasedMethodsEstimate2006,
-  type = {{{DFO Canadian Science Advisory Secretariat Research Document}}},
+@article{parkenHabitatbasedMethodsEstimate2006,
   title = {Habitat-Based Methods to Estimate Escapement Goals for Data Limited {{Chinook}} Salmon Stocks in {{British Columbia}}, 2004},
   author = {Parken, Charles K. and McNicol, Richard E. and Irvine, James R.},
   year = {2006},
-  number = {2006/083},
+  journal = {DFO Canadian Science Advisory Secretariat Research Document},
+  volume = {2006/83},
   pages = {vii + 67},
   abstract = {Fisheries and Oceans Canada requires escapement goals for Chinook salmon (Oncorhynchus tshawytscha) stocks to evaluate their status and achieve objectives established by international agreements and domestic policy. Unfortunately the data typically needed to establish these `goals', using stock-recruitment techniques, are expensive to gather and are, for most stocks, lacking. This prompted us to develop the habitat-based approach to generate escapement goals described in this report. We related productive capacity to freshwater habitat area based on results from a meta-analysis of 25 Chinook stocks. Stocks were distributed between central Alaska and northern Oregon and represented a broad range of environments and life history. We developed an allometric model that predicted Smsy and Srep (spawners required to produced maximum sustained yield and replacement, respectively) from the watershed area and assessed the model's performance. The model adequately predicted the Smsy and Srep for an independent data source and out-performed a current interim method applied to British Columbia (BC) Key Streams. The habitat-based approach adequately predicted Smsy and Srep for seven case study examples, although it overestimated the productive capacity of stocks with relatively small spawning areas. Our habitat-based model can generate biologically-based escapement goals, rooted in fish-production relationships, for data limited stocks over a broad range of environments. This simple approach requires easily acquirable data and makes few assumptions. However, spawner escapements of known accuracy and reliability are required, which may impede implementation for some systems. The approach is well-suited for most data limited stocks in BC and can be tested and refined as new stock-recruitment data become available. Since the habitat-based method was more accurate than the interim method for BC Key Streams, we recommend applying it for data limited stocks in BC to establish escapement goals until more stock-specific data are available.}
 }
