--- a/caseStudyWP/03-chap3.Rmd
+++ b/caseStudyWP/03-chap3.Rmd
@@ -297,10 +297,10 @@ knitr::include_graphics("figure/coho-all-LogisticLRP.png")
 ```
 
   
-When the Logistic:Sgen-Ricker model was used, aggregate abundance LRPs ranged from  21,189 to 35,737 spawners, depending on whether the required probability of all CUs being above S~gen~ was moderate (50%) or very likely (99%) (Table \@ref(tab:logisticLRPs2020)). LRPs increased across all probability levels when the carrying capacity was assumed higher under the Logistic:Sgen-priorCap model (Table \@ref(tab:logisticLRPs2020)). The higher S~gen~ values for most CUs under the alternative Logistic:Sgen_priorCap model formulation resulted in more historical years in which < 100% of CUs were above S~gen~. The result was a shift of the logistic curve to the right (Figure \@ref(fig:coho-IM-logisticFit2020)). LRPs based on the Logistic:Sgen_priorCap model ranged from 23,245 to 39,200 spawners, depending on whether the required probability of all CUs being above Sgen <!--do you want this as subscript?-->was moderate (50%) or very likely (99%).  
+When the Logistic:Sgen-Ricker model was used, aggregate abundance LRPs ranged from  21,189 to 35,737 spawners, depending on whether the required probability of all CUs being above S~gen~ was moderate (50%) or very likely (99%) (Table \@ref(tab:logisticLRPs2020)). LRPs increased across all probability levels when the carrying capacity was assumed higher under the Logistic:Sgen-priorCap model (Table \@ref(tab:logisticLRPs2020)). The higher S~gen~ values for most CUs under the alternative Logistic:Sgen_priorCap model formulation resulted in more historical years in which < 100% of CUs were above S~gen~. The result was a shift of the logistic curve to the right (Figure \@ref(fig:coho-IM-logisticFit2020)). LRPs based on the Logistic:Sgen_priorCap model ranged from 23,245 to 39,200 spawners, depending on whether the required probability of all CUs being above S~gen~ was moderate (50%) or very likely (99%).  
 
 
-When CU status was based on the IFCRT distributional target, the fit of the logistic curve was more gradual than the two Sgen <!--do you want this as subscript?-->models due to a greater overlap in 'successful' (all CUs > distributional target) and 'unsuccessful' (<100% of CUs above distributional target) years at low to moderate aggregate abundances.  In 3 of the 6 years with aggregate abundances below 20,000 spawners, the distributional target was not met for all CUs (Figure \@ref(fig:coho-IM-logisticFit2020)). LRPs based on this model also became increasingly large at high probability thresholds (Table \@ref(tab:logisticLRPs2020)). The LRP based on a 99% probability was 44,403 spawners, with a 95% confidence interval extending from 15,102 - 73,703 spawners.  
+When CU status was based on the IFCRT distributional target, the fit of the logistic curve was more gradual than the two S~gen~ models due to a greater overlap in 'successful' (all CUs > distributional target) and 'unsuccessful' (<100% of CUs above distributional target) years at low to moderate aggregate abundances.  In 3 of the 6 years with aggregate abundances below 20,000 spawners, the distributional target was not met for all CUs (Figure \@ref(fig:coho-IM-logisticFit2020)). LRPs based on this model also became increasingly large at high probability thresholds (Table \@ref(tab:logisticLRPs2020)). The LRP based on a 99% probability was 44,403 spawners, with a 95% confidence interval extending from 15,102 - 73,703 spawners.  
 
 
 \renewcommand*{\arraystretch}{1.5}
@@ -324,7 +324,7 @@ When CU status was based on the IFCRT distributional target, the fit of the logi
 
 Logistic regression diagnostics showed that key regression assumptions were met, and that model fits were strong enough to support estimation of logistic regression LRPs from all three models (Table \@ref(tab:logisticDiagIFC2020)). The assumption of linearity was demonstrated based on the Box-Tidwell test. This test evaluates the significance of adding a non-linear interaction term to the logit regression. We found that this additional interaction term was not significant, supporting the linearity assumption (Table \@ref(tab:logisticDiagIFC2020)). An examination of deviance residuals did not show any large outliers, i.e., no residual values were greater than 2 standard deviations away from zero for all three models. Observations were also found to be independent at all year lags examined for all three models based on no significant autocorrelations among residuals. 
 
-The Wald Test showed that logistic model coefficient for aggregate abundance was marginally significant (p < 0.10). Pseudo-$R^2$ statistics indicated a moderately strong relationship between aggregate abundance and the probability of all CUs being above their lower benchmarks, and the goodness of fit statistics indicated a significant fit of the model with aggregate abundance relative to the null model based on p-values less than 0.01. Finally, 'out-of-sample' hit ratios representing classification accuracy as the proportion of successful predictions when one year of data was iteratively left out of the model fit, were relatively high at low probability thresholds, indicating good accuracy. This results<!--result?--> was especially true for the Logistic:Sgen-Ricker and Logistic:Sgen-priorCap model which had hit ratios ranging between 0.83 and 0.87 at probability thresholds of 50% and 66%. Classification accuracy was lowest for all models at the 99% probability threshold.
+The Wald Test showed that logistic model coefficient for aggregate abundance was marginally significant (p < 0.10). Pseudo-$R^2$ statistics indicated a moderately strong relationship between aggregate abundance and the probability of all CUs being above their lower benchmarks, and the goodness of fit statistics indicated a significant fit of the model with aggregate abundance relative to the null model based on p-values less than 0.01. Finally, 'out-of-sample' hit ratios representing classification accuracy as the proportion of successful predictions when one year of data was iteratively left out of the model fit, were relatively high at low probability thresholds, indicating good accuracy. This result was especially true for the Logistic:Sgen-Ricker and Logistic:Sgen-priorCap model which had hit ratios ranging between 0.83 and 0.87 at probability thresholds of 50% and 66%. Classification accuracy was lowest for all models at the 99% probability threshold.
 
 
 \renewcommand*{\arraystretch}{1.5}
@@ -394,7 +394,7 @@ knitr::include_graphics("figure/coho-StatusByNCUs-SPopAbundThreshST-50.png")
 
 ### Methods
 
-Forward projections of each of the five CUs with the Interior Fraser Coho SMU were done using the `samSim` modelling tool (Appendix \@ref(app:samsim-appendix)). Finer-scale projections at the scale of sub-populations were not possible as spawner-recruitment data series were not available at this scale. As a result, projection LRPs using the IFCRT recovery target was not possible; we were restricted to looking at CU-level status estimates based on S~gen~<!--there is a mix of S~gen~, S~gen~, and Sgen (mainly captions). Not sure what we decided on for consistency-->. Parameters characterizing CU-level population dynamics, smolt-to-adult survival rates, and exploitation rates were derived directly from data sets described in Section \@ref(cohoData). Base case parameters and alternative parameter values tested in sensitivity analyses are provided in Table \@ref(tab:coho-BaseProjectPars). Additional details on key model parameterizations and sensitivity analyses are also described in text below.  
+Forward projections of each of the five CUs with the Interior Fraser Coho SMU were done using the `samSim` modelling tool (Appendix \@ref(app:samsim-appendix)). Finer-scale projections at the scale of sub-populations were not possible as spawner-recruitment data series were not available at this scale. As a result, projection LRPs using the IFCRT recovery target was not possible; we were restricted to looking at CU-level status estimates based on S~gen~<!--there is a mix of S~gen~ and Sgen (mainly captions). Not sure what we decided on for consistency-->. Parameters characterizing CU-level population dynamics, smolt-to-adult survival rates, and exploitation rates were derived directly from data sets described in Section \@ref(cohoData). Base case parameters and alternative parameter values tested in sensitivity analyses are provided in Table \@ref(tab:coho-BaseProjectPars). Additional details on key model parameterizations and sensitivity analyses are also described in text below.  
 
 Projection model outputs were used to estimate projection LRPs using the methods described on Section \@ref(projectedMethods). Forward projections were run for 30 years over 20,000 simulation trials, with projections initialized using spawner abundances from the most recent four return years, 2016 - 2020.  The high number of simulation trials was required to stabilize LRP estimates given the binning of aggregate escapement in 200-fish intervals to identify LRPs based on probability thresholds.  Simulated trajectories were near equilibrium after 4 years of projections during which trajectories depended primarily on the historical time-series (Figures \@ref(fig:coho-CUProjections-Ricker) and \@ref(fig:coho-CUProjections-Ricker-priorCap)).
 
