--- a/guidelinesWP/05-chap5.Rmd
+++ b/guidelinesWP/05-chap5.Rmd
@@ -284,7 +284,7 @@ LW: I agree, that would be useful!
 ### Step 6: Peer-review of Status Relative to Proportional LRP
 
 
-We recommend peer-review of the CU data and assessments used in steps 1, 2 and 5 if CU assessment are developed outside of an existing published, peer-reviewed process. Also, we recommend peer-review of decisions on SMU-scale aggregation from steps 3 and 4. This peer review can occur, at least in part, through DFO's State of the Salmon Program's annual implementation of the Pacific Salmon Status Scanner. The Salmon Scanner will be applied annually as part of a process integrating outputs with local expertise to provide statuses for CUs. Expert review is required to vet statuses derived from the application of the Salmon Scanner to ensure they are consistent with underlying biological categories given the multiple and sometimes conflicting dimensions of status. <!--CH: Ann-Marie suggested an example from Fraser Sockeye Shuswap here, but I wonder if it might make the flow of this section awkward? Happy to consider an inclusion from Ann-Marie--> The outputs from that process can be the basis for developing CU-level statuses to inform SMU-level LRPs. We emphasize the importance of peer-review of LRPs and status assessments of SMUs prescribed under regulation, either as part the annual application of the Salmon Scanner or in any separate SMU-specific peer-review process. Peer review could be documented, for example, in a CSAS Research Document, CSAS Science Response, and/or CSAS Science Advice Report.<!--CH question: Is this requirement for CSAS documentation okay? We should ask Julie/Jason to what extent this is consistent with out marine species, and then mention the consistency here. Some TWG participants suggested LRP identification could occur in the rebuilding plan, but this seems awkward as rebuilding objectives may be related to LRPs, or at least they will in other species, so best to keep the 2 processes separate I think.
+We recommend peer-review of the CU data and assessments used in steps 1 (Data compilation), 2 (Assess CU data deficiency) and 5 (Assess status relative to proportional LRP) if CU assessment are developed outside of an existing published, peer-reviewed process. Also, we recommend peer-review of decisions on SMU-scale aggregation from steps 3 (Representation of data-deficient CUs) and 4 (Proportion of CUs required to be above Red status). <!--KH: note that I added descriptions in brackets after each step as a refresher. Is this ok? --> This peer review can occur, at least in part, through DFO's State of the Salmon Program's annual implementation of the Pacific Salmon Status Scanner. The Salmon Scanner will be applied annually as part of a process integrating outputs with local expertise to provide statuses for CUs. Expert review is required to vet statuses derived from the application of the Salmon Scanner to ensure they are consistent with underlying biological categories given the multiple and sometimes conflicting dimensions of status. <!--CH: Ann-Marie suggested an example from Fraser Sockeye Shuswap here, but I wonder if it might make the flow of this section awkward? Happy to consider an inclusion from Ann-Marie--> The outputs from that process can be the basis for developing CU-level statuses to inform SMU-level LRPs. We emphasize the importance of documented <!--KH: I added documented here. Is this ok? --> peer-review of LRPs and status assessments of SMUs prescribed under regulation, either as part the annual application of the Salmon Scanner or in any separate SMU-specific peer-review process. Peer review could be documented, for example, in a CSAS Research Document, CSAS Science Response, and/or CSAS Science Advice Report.<!--CH question: Is this requirement for CSAS documentation okay? We should ask Julie/Jason to what extent this is consistent with out marine species, and then mention the consistency here. Some TWG participants suggested LRP identification could occur in the rebuilding plan, but this seems awkward as rebuilding objectives may be related to LRPs, or at least they will in other species, so best to keep the 2 processes separate I think.
 CW: Agree with keeping rebuilding plan and LRP separate. 
 LW: I agree as well.-->
 
@@ -308,6 +308,9 @@ CW: I have the same question as Kendra, I thought Sue mentioned that the SOS ass
 Although, since we do not know what the SOS process will look like, it may be useful to suggest it goes through CSAS? I think it would be ideal that at least a SAR gets generated form the annual assessments. That would be consistent with stock assessments for other species. 
 
 CH: revised accordingly. Does this revised text capture it?
+
+KH: (Jan 31): yes - looks good
+
 -->
 
 <!--SG comment: if status is approximated with the algorithm and the status on the metric is red, this could trigger an integrated status assessment to derive a formal WSP status prior to triggering LRP. -->
@@ -316,7 +319,7 @@ The frequency of SMU-scale peer reviews outside of the annual implementation of 
 
 ### Step 7: Are Aggregate Abundance LRPs Required For Fisheries Management? 
 
-Although proportional LRPs may meet requirements under the Fish Stocks provisions for Pacific salmon, abundance-based LRPs may be needed for fisheries management decisions (Section \@ref(roleLRPs)).  For SMUs where harvest at the aggregate scale is a dominant driver of population dynamics and restricting fisheries harvest is a principle lever, an LRP along the metric of SMU-level abundances may support precautionary management. For example, when LRPs are used to inform a harvest control rule, fishing pressure can be gradually curtailed as aggregate abundances decline towards the LRP to avoid depletion below that level. Aggregate abundance-based benchmarks may in some cases be required for local or international management. For example, aggregate escapement goals are required for Nass and Skeena Sockeye under Pacific Salmon Treaty provisions (2019)<!--@TreatyGovernmentCanada2019 . Have to figure out how to reference this without having the full name of the treaty here-->, although to comply with WSP objectives, the aggregate escapement goal must consider CU-level diversity. 
+Although proportional LRPs may meet requirements under the Fish Stocks provisions for Pacific salmon, abundance-based LRPs may be needed for fisheries management decisions (Section \@ref(roleLRPs)).  For SMUs where harvest at the aggregate scale is a dominant driver of population dynamics and restricting fisheries harvest is a principle management lever, an LRP along the metric of SMU-level abundances may support precautionary management. For example, when LRPs are used to inform a harvest control rule, fishing pressure can be gradually curtailed as aggregate abundances decline towards the LRP to avoid depletion below that level. Aggregate abundance-based benchmarks may in some cases be required for local or international management. For example, aggregate escapement goals are required for Nass and Skeena Sockeye under Pacific Salmon Treaty provisions (2019)<!--@TreatyGovernmentCanada2019 . Have to figure out how to reference this without having the full name of the treaty here-->, although to comply with WSP objectives, the aggregate escapement goal must consider CU-level diversity. 
 
 However, when LRPs are defined within the context of a Management Procedure framework (Section \@ref(roleLRPs)), then an aggregate abundance LRP may not be required if the framework can demonstrate the probability of individual CUs having status above Red for various management options. For Pacific salmon, management procedures may extend beyond harvest control rules to include time-area closures, gear restrictions, habitat enhancement or hatchery supplementation to protect individual CUs. Therefore, the choice to develop an aggregate abundance LRP depends on the decision context, and should be made in collaboration with various sectors and First Nations responsible for management decisions that affect the SMU. If aggregate abundance LRPs are not required, assessment of the SMU would be provided from steps 1-6. The following steps (8-9) are relevant if aggregate abundance LRPs are required, and build on proportional LRPs derived in the previous steps. Uncertainties introduced by the inclusion of models to relate aggregate abundances to CU-level statuses should be considered when choosing LRP methods (Principle 5 in Section \@ref(principles)). 
 
@@ -333,7 +336,7 @@ In the context described here, aggregate abundance LRPs are scientifically deriv
 To define aggregate abundance LRPs, first, an acceptable probability of having all component CU statuses above Red is identified. While a 100% or nearly 100% probability of all component CUs being above Red may be desirable from a conservation perspective, inherent uncertainties in population dynamics make this choice impractical. Often, LRPs above the highest observed aggregate spawner abundances are required to achieve a near 100% probability of components being above Red status. Instead, we recommend applying a probability of at least 50% of all CUs being above Red status to align with WSP objectives. As outlined in Section \@ref(est-methods), we provide LRPs associated with a range of probabilities, 50%, 66%, 90%, and 99% (where analytically possible) derived from categories of likelihoods used by the International Panel on Climate Change [Table \@ref(tab:LikelihoodsIPCC), @mastrandreaGuidanceNoteLead2010], instead of specifying a single probability. We distinguish *the probability of all* CUs being above Red from *the proportion of* CUs above Red (identified as 100% in Step 4). Both proportional and aggregate abundance LRPs are set at levels where all CUs are above Red status, but aggregate abundance LRPs assign a probability to this occurrence.
 
 
-In our case studies, we provide logistic regression LRPs for the four probability thresholds described above, and focus sensitivity analyses on a 50% probability of all component CUs having status above Red. This approach to delineating serious harm could be considered risk neutral, where risks can be accounted for directly and explicitly in harvest control rules that consider trade-offs among multiple objectives.    
+In our case studies, we provide aggregate abundance LRPs <!--KH: changed from just saying 'logistic regression LRPs' before. Is this ok? -->for the four probability thresholds described above, and focus sensitivity analyses on a 50% probability of all component CUs having status above Red. This approach to delineating serious harm could be considered risk neutral, where risks can be accounted for directly and explicitly in harvest control rules that consider trade-offs among multiple objectives.    
 
 
 <!-- from ch 6. Does this belonw here? reword?-->
